fix: Ensure scrollbars in fit-height containers don't leave rounded corners

--- a/src/container/styles.scss
+++ b/src/container/styles.scss
@@ -78,6 +78,8 @@
   &-fit-height {
     block-size: 100%;
     overflow: hidden;
+    border-end-start-radius: awsui.$border-radius-container;
+    border-end-end-radius: awsui.$border-radius-container;
   }
 }
 
